<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.moeharp.cis436_moeharp_prog2.CharacterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btnWarrior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/warrior" />

        <Button
            android:id="@+id/btnMage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mage" />

        <Button
            android:id="@+id/btnHealer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/healer" />

        <Button
            android:id="@+id/btnHunter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hunter" />

        <Button
            android:id="@+id/btnPaladin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paladin" />
    </LinearLayout>
</FrameLayout>
